# toy-kv-engine

./: .gitignore  .mergify.yml  .tmp-pr-body-parallel-scan-rfc.md  .typos.toml  AGENTS.md  Cargo.toml  Makefile.toml  README.md  TODO.md  chaos-todo.md  codecov.yml  lcov.info  lcov2.info  lsan-suppressions.txt  rust-toolchain  rustfmt.toml  todo.md
.cargo/: config.toml
.claude/: settings.local.json
.config/: nextest.toml
.github/: codecov.yml
.github/workflows/: check.yml  dependency-review.yml  safety.yml  scheduled.yml  scorecards.yml  test.yml
.kimi-code/: config.toml.example
.kimi-code/hooks/: post-tool-use.sh  pre-tool-use.sh
docs/: async-phase3-measurement.md  async-scan-findings.md  bench-report-crud-bench-fjall.md  bench-report-crud-bench-rocksdb.md  bench-report-deleterange.md  bench-report-vlog.md  io-uring-bench.md  parallel-scan-findings.md  perf-profile.md
docs/superpowers/plans/: 2026-06-05-reduce-key-cloning-plan.md
docs/superpowers/specs/: 2026-06-05-reduce-key-cloning-design.md
kv-engine/: Cargo.toml  README.md
kv-engine/benches/: deleterange_benchmarks.rs  memtable_bench.rs  vlog_benchmarks.rs  vlog_index_benchmarks.rs  wal_bench.rs
kv-engine/src/: block.rs  blocking_executor.rs  cache.rs  compact.rs  debug.rs  future_ext.rs  io_uring.rs  iterators.rs  key.rs  lib.rs  lsm_iterator.rs  lsm_storage.rs  manifest.rs  mem_table.rs  mvcc.rs  prefetch.rs  profiling.rs  range_tombstone.rs  scan_trace.rs  table.rs  tests.rs  vlog_integration_tests.rs  wal.rs
kv-engine/src/block/: builder.rs  iterator.rs
kv-engine/src/chaos/: control_log.rs  failpoint.rs  mod.rs  oracle.rs  scenarios.rs  stress.rs
kv-engine/src/compact/: leveled.rs  simple_leveled.rs  tiered.rs
kv-engine/src/iterators/: concat_iterator.rs  merge_iterator.rs  two_merge_iterator.rs
kv-engine/src/mvcc/: txn.rs  watermark.rs
kv-engine/src/table/: bloom.rs  builder.rs  iterator.rs
kv-engine/src/tests/: async_api.rs  block.rs  bloom_compression.rs  cache_backfill.rs  compaction.rs  compaction_gc.rs  compaction_integration.rs  compaction_integration_2.rs  harness.rs  iterators.rs  leveled_compaction.rs  lsm_storage_extra.rs  manifest.rs  memtable.rs  merge_iterator.rs  mvcc_scan.rs  prefix_scan.rs  scan_flush.rs  simple_leveled_compaction.rs  sst.rs  tiered_compaction.rs  tiered_unit.rs  ttl.rs  txn_serializable.rs  wal.rs  week1_day2.rs  week1_day4.rs  week1_day5.rs  week1_day6.rs  week2_day1.rs  week2_day2.rs  week2_day3.rs  week2_day6.rs
kv-engine/src/tests/vlog_integration_tests/: advanced.rs  basic.rs  cache.rs  gc.rs  manifest.rs  mod.rs  sst_builder.rs
kv-engine/src/vlog/: builder.rs  gc.rs  index.rs  mod.rs  reader.rs
kv-engine/tests/: chaos.rs  chaos_failpoint.rs  chaos_integration.rs  cross_process_bloom.rs
rfcs/: 001-key-value-separation.md  002-io-uring-disk-writes.md  003-thread-per-core-compio.md  004-cache-backfill.md  005-mvcc.md  006-prefix-search.md  007-prefix-bloom-filter.md  008-prefetching.md  009-compaction-filter.md  010-delete-range.md  011-db-bench-harness.md  012-parallel-wal.md  012-wal-group-commit.md  013-chaos-testing.md  014-async-operations.md  015-parallel-scan.md  016-ttl.md  017-mvcc-garbage-collection.md
src/: hello.rs  lib.rs  main.rs
xtask/: Cargo.toml
