[package]
name = "kv-engine"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.cargo-machete]
ignored = ["arc-swap", "crossbeam-epoch"]

[[bin]]
name = "chaos-child"
path = "src/bin/chaos-child.rs"
required-features = ["chaos-testing"]

[features]
bench = []
chaos-testing = ["fail/failpoints"]
hotpath-profile = ["dep:hotpath", "hotpath/hotpath", "hotpath/threads"]

[dependencies]
TinyUFO = "0.8"
ahash = "0.8"
anyhow = "1"
arc-swap = "1"
bytes = "1"
clap = { version = "4.4.17", features = ["derive"] }
crc32fast = "1.3.2"
crossbeam-channel = "0.5.11"
crossbeam-epoch = "0.9"
crossbeam-queue = "0.3"
crossbeam-skiplist = "0.1"
dashmap = "6"
fail = "0.5"
hotpath = { version = "0.21.2", default-features = false, optional = true }

io-uring = "0.6"
libc = "0.2"
log = "0.4"
logforth = { version = "0.30", features = ["starter-log", "layout-json", "append-async"] }
nom = "7.1.3"
ouroboros = "0.18"
parking_lot = "0.12"
rand = "0.8.5"
rustyline = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
static_assertions = "1"
tempfile = "3"

[[bench]]
name = "vlog_benchmarks"
harness = false

[[bench]]
name = "vlog_index_benchmarks"
harness = false

[[bench]]
name = "deleterange_benchmarks"
harness = false

[[bench]]
name = "memtable_bench"
harness = false
required-features = ["bench"]

[[bench]]
name = "wal_bench"
harness = false

[[test]]
name = "chaos_failpoint"
path = "tests/chaos_failpoint.rs"
required-features = ["chaos-testing"]

[[test]]
name = "chaos"
path = "tests/chaos.rs"
required-features = ["chaos-testing"]
