[package]
name = "mini-lsm-xtask"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
duct = "0.13"
